implementacion de login de usuarios y creacion de usuarios de admin

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 spring.application.name=tareasApp
-# Configuración de la base de datos
-spring.datasource.url=jdbc:mysql://localhost:3306/tareas_app?useSSL=false&serverTimezone=UTC
-spring.datasource.username=appuser
+# Configuracion de la base de datos
+spring.datasource.url=jdbc:mysql://localhost:3306/tareas_app?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
+spring.datasource.username=admin
 spring.datasource.password=Camaleon08
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# Configuración de JPA/Hibernate
+# Configuracion de JPA/Hibernate
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
